.metadata/.plugins/org.eclipse.cdt.ui/krest.build.log
02:44:52 **** Rebuild of configuration Debug for project krest ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:67:7: error: 'new' undeclared (first use in this function)
     a=new int*[n];
       ^
..\main.c:67:7: note: each undeclared identifier is reported only once for each function it appears in
..\main.c:67:11: error: expected ';' before 'int'
     a=new int*[n];
           ^
..\main.c:69:18: error: expected ';' before 'int'
         a[i]=new int[n];
                  ^

02:44:52 Build Finished (took 278ms)

